# invest-vault

./: .gitignore  DESIGN.md  LICENSE  PACKAGING.md  PRODUCT.md  README.md  SHA256SUMS.txt  pyproject.toml  sidecar.spec  sidecar_entry.py  vendor-lock.json
.github/workflows/: desktop.yml
scripts/: build_sidecar.py  run_research_performance_benchmark.py
skills/agent-reach/: SKILL.md
skills/agent-reach/references/: search.md  web.md
skills/stock-analysis/: SKILL.md
skills/stock-analysis/references/: local-repo-direct-invocation.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: save-export.toml
src-tauri/src/: main.rs
src/invest_vault/: __init__.py  __main__.py  adapters.py  ai.py  ai_providers.py  ai_roles.py  ai_skills.py  api.py  contract.py  evidence.py  evidence_orchestration.py  exports.py  ledger.py  providers.py  research.py  runtime.py  shared_research_board.py  upstream_version.py
tests/: test_ai.py  test_ai_providers.py  test_ai_skills.py  test_api.py  test_evidence.py  test_evidence_orchestration.py  test_ledger.py  test_long_context_acceptance.py  test_providers.py  test_research_exports.py  test_research_pipeline.py  test_runtime.py  test_shared_research_board.py  test_upstream_version.py  test_vendor_lock.py
tests/fixtures/: performance_optimization_baseline.json
tests/fixtures/evidence_contract/: company_partial.json  quote_available.json
web/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
web/src/: main.tsx  styles.css  workbench.tsx
