[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "invest-vault"
version = "0.1.9"
description = "Local-first investment research ledger."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["httpx2>=0.1", "pytest>=7", "ruff>=0.4"]

[project.scripts]
invest-vault = "invest_vault.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/invest_vault"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
