[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "invest-vault"
version = "0.3.34"
description = "Local-first investment research ledger."
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "cryptography>=45,<47",
    "fastapi>=0.115",
    "pypdf>=5,<7",
    "requests>=2.31",
    "uvicorn>=0.30",
    "xlrd>=2.0,<3",
]

[project.optional-dependencies]
dev = ["httpx2>=0.1", "pytest>=7", "ruff>=0.4"]

[project.scripts]
invest-vault = "invest_vault.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/invest_vault", "src/stock_analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
